--- a/project/templates/home.html
+++ b/project/templates/home.html
@@ -30,7 +30,7 @@
 <div class="row">
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/1.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/1.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
@@ -39,7 +39,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/2.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/2.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Some item name here</a>
 				<div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
@@ -48,7 +48,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/3.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/3.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Great product name here</a>
 				<div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
@@ -57,7 +57,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/4.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/4.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
@@ -66,7 +66,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/5.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/5.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
@@ -75,7 +75,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/6.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/6.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Some item name here</a>
 				<div class="price mt-1">$280.00</div> <!-- price-wrap.// -->
@@ -84,7 +84,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/7.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/7.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Great product name here</a>
 				<div class="price mt-1">$56.00</div> <!-- price-wrap.// -->
@@ -93,7 +93,7 @@
 	</div> <!-- col.// -->
 	<div class="col-md-3">
 		<div class="card card-product-grid">
-			<a href="./product-detail.html" class="img-wrap"> <img src="images/items/9.jpg"> </a>
+			<a href="./product-detail.html" class="img-wrap"> <img src="{% static 'images/items/9.jpg' %}"> </a>
 			<figcaption class="info-wrap">
 				<a href="./product-detail.html" class="title">Just another product name</a>
 				<div class="price mt-1">$179.00</div> <!-- price-wrap.// -->
