--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -81,12 +81,13 @@ $(document).ready(function() {
                         <i class="fa fa-bars"></i> All category 
                     </button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="#">Machinery / Mechanical Parts / Tools </a>
-                        <a class="dropdown-item" href="#">Consumer Electronics / Home Appliances </a>
-                        <a class="dropdown-item" href="#">Auto / Transportation</a>
-                        <a class="dropdown-item" href="#">Apparel / Textiles / Timepieces </a>
-                        <a class="dropdown-item" href="#">Home & Garden / Construction / Lights </a>
-                        <a class="dropdown-item" href="#">Beauty & Personal Care / Health </a> 
+                        <a class="dropdown-item" href="{% url 'store' %}">All products</a>
+                        {% for i in links %}
+                        
+                        <a class="dropdown-item" href="{{i.get_url}}">{{i.category_name}}</a>
+
+                        {% endfor %}
+
                     </div>
                 </div>  <!-- category-wrap.// -->
             </div> <!-- col.// -->
