--- a/project/templates/store.html
+++ b/project/templates/store.html
@@ -28,13 +28,10 @@
                 <div class="card-body">
                     
                     <ul class="list-menu">
-                    <li><a href="#">People  </a></li>
-                    <li><a href="#">Watches </a></li>
-                    <li><a href="#">Cinema  </a></li>
-                    <li><a href="#">Clothes  </a></li>
-                    <li><a href="#">Home items </a></li>
-                    <li><a href="#">Animals</a></li>
-                    <li><a href="#">People </a></li>
+                        <li><a href="{% url 'store' %}">All products</a></li>
+                        {% for i in links %}
+                            <li><a href="{{i.get_url}}">{{i.category_name}}</a></li>
+                        {% endfor %}
                     </ul>
     
                 </div> <!-- card-body.// -->
@@ -121,14 +118,14 @@
     
     <header class="border-bottom mb-4 pb-3">
             <div class="form-inline">
-                <span class="mr-md-auto">32 Items found </span>
+                <span class="mr-md-auto"><b>{{product_count}}</b> Items found </span>
                 
             </div>
     </header><!-- sect-heading -->
     
     <div class="row">
         {% for i in products %}
-        <div class="col-md-4">
+        <div class="col-md-3">
             <figure class="card card-product-grid">
                 <div class="img-wrap"> 
                     
