add to cart functionality created

--- a/project/templates/base.html
+++ b/project/templates/base.html
@@ -115,7 +115,7 @@ $(document).ready(function() {
                                 </div>
                             </div>
                             <a href="./cart.html" class="widget-header pl-3 ml-3">
-                                <div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div>
+                              <a href="{% url 'cart' %}"><div class="icon icon-sm rounded-circle border"><i class="fa fa-shopping-cart"></i></div></a>  
                                 <span class="badge badge-pill badge-danger notify">0</span>
                             </a>
                         </div> <!-- widgets-wrap.// -->
