--- a/project/templates/cart.html
+++ b/project/templates/cart.html
@@ -9,7 +9,16 @@
     <div class="container">
     
     <!-- ============================ COMPONENT 1 ================================= -->
+    {% if not cart_items %} <!--If there is no cart items-->
+
+    <div class="text-center">
+    <h2>Your shopping cart is empty</h2>
+        <br>
+            <a href="{% url 'store' %}" class="btn btn-primary">Continue shopping</a>
+    </div>
     
+    {% else %}
+   
     <div class="row">
         <aside class="col-lg-9">
     <div class="card">
@@ -29,8 +38,13 @@
             <figure class="itemside align-items-center">
                 <div class="aside"><img src="{{i.product.images.url}}" class="img-sm"></div>
                 <figcaption class="info">
-                    <a href="#" class="title text-dark">{{i.product.product_name}}</a>
-                    <p class="text-muted small">Matrix: 25 Mpx <br> Brand: Canon</p>
+       
+
+                    <a href="{{i.product.get_url}}" class="title text-dark">{{i.product.product_name}}</a>
+
+                 
+
+                    <p class="text-muted small">Color: 25 Mpx <br> Size: Canon</p>
                 </figcaption>
             </figure>
         </td>
@@ -39,11 +53,11 @@
                         <div class="col"> 
                             <div class="input-group input-spinner">
                                 <div class="input-group-prepend">
-                                <button class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-minus"></i> </button>
+                                <a href="{% url 'decrement_cart' i.product.id %}" class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-minus"></i> </a>
                                 </div>
                                 <input type="text" class="form-control"  value="{{i.quantity}}">
                                 <div class="input-group-append">
-                                <button class="btn btn-light" type="button" id="button-minus"> <i class="fa fa-plus"></i> </button>
+                                <a href='{% url "add_cart" i.product.id %}' class="btn btn-light" type="button" id="button-plus"> <i class="fa fa-plus"></i> </a>
                                 </div>
                             </div> <!-- input-group.// -->
                         </div> <!-- col.// -->
@@ -55,10 +69,10 @@
             </div> <!-- price-wrap .// -->
         </td>
         <td class="text-right"> 
-        <a href="" class="btn btn-danger"> Remove</a>
+        <a href="{% url 'remove_cart_item' i.product.id %}" class="btn btn-danger"> Remove</a>
         </td>
     </tr>
-    {% endfor %}
+        {% endfor %}
     </tbody>
     </table>
     </div> <!-- card.// -->
@@ -70,15 +84,15 @@
             <div class="card-body">
                 <dl class="dlist-align">
                   <dt>Total price:</dt>
-                  <dd class="text-right">$69.97</dd>
+                  <dd class="text-right">${{total}}</dd>
                 </dl>
                 <dl class="dlist-align">
                   <dt>Tax:</dt>
-                  <dd class="text-right"> $10.00</dd>
+                  <dd class="text-right"> ${{tax}}</dd>
                 </dl>
                 <dl class="dlist-align">
-                  <dt>Total:</dt>
-                  <dd class="text-right text-dark b"><strong>$59.97</strong></dd>
+                  <dt>Grand Total:</dt>
+                  <dd class="text-right text-dark b"><strong>${{grand_total}}</strong></dd>
                 </dl>
                 <hr>
                 <p class="text-center mb-3">
@@ -93,6 +107,7 @@
     
     
     </div> <!-- row.// -->
+    {% endif %}
     <!-- ============================ COMPONENT 1 END .// ================================= -->
     
     </div> <!-- container .//  -->
