cart functionalities done

--- a/project/templates/store.html
+++ b/project/templates/store.html
@@ -140,7 +140,7 @@
                             <del class="price-old">$1980</del>
                         </div> <!-- price-wrap.// -->
                     </div>
-                    <a href="{% url 'add_cart' i.id %}" class="btn btn-block btn-success">Add to cart </a>
+                    <a href="{{i.get_url}}" class="btn btn-block btn-success">View Product</a>
                 </figcaption>
             </figure>
         </div> <!-- col.// -->
